# cloudvault

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs
src/db/migrations/: 001_initial_schema.sql  002_add_admin_role.sql
src/routes/: auth.rs  files.rs  shares.rs  users.rs
tests/: integration_test.rs  models_test.rs
tests/common/: mod.rs
web/: app.js  debug.html  index.html  styles.css
