[package]
name = "cloudvault-server"
version = "0.1.0"
edition = "2021"
description = "CloudVault - Lightweight Private Cloud Storage Server"
authors = ["CloudVault Team"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "macros", "time"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.16"
argon2 = "0.5"

# Config
config = "0.15"
dotenvy = "0.15"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"
http-body-util = "0.1"

# File handling
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2"
bytes = "1"

# Storage SDKs (optional, compiled on demand)
# aws-sdk-s3 = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["full"] }
tokio-test = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[[bin]]
name = "cloudvault-server"
path = "src/main.rs"